test generations, draw chart, filling the table

--- a/gui.ui
+++ b/gui.ui
@@ -54,7 +54,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -479,7 +479,7 @@ color: rgb(255, 255, 255);</string>
        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
       </property>
      </widget>
-     <widget class="QLineEdit" name="input_t_test">
+     <widget class="QLineEdit" name="input_generations_test">
       <property name="geometry">
        <rect>
         <x>510</x>
@@ -571,7 +571,7 @@ color: white;</string>
 Header {Background-color: rgb(190,1,1);}</string>
       </property>
       <property name="verticalScrollBarPolicy">
-       <enum>Qt::ScrollBarAlwaysOff</enum>
+       <enum>Qt::ScrollBarAlwaysOn</enum>
       </property>
       <property name="horizontalScrollBarPolicy">
        <enum>Qt::ScrollBarAlwaysOff</enum>
